--- a/.probo.yaml
+++ b/.probo.yaml
@@ -12,4 +12,4 @@ steps:
     command: 'pwd'
   - name: Run behat tests
     plugin: Shell
-    command: 'cd $SRC_DIR/www/sites/all/tests ; composer install ; ./bin/behat'
+    command: 'cd $SRC_DIR/www/sites/all/tests ; composer install ; bin/behat'
