--- a/www/sites/all/tests/behat.yml
+++ b/www/sites/all/tests/behat.yml
@@ -10,7 +10,7 @@ default:
       blackbox: ~
       api_driver: 'drupal'
       drupal:
-        drupal_root: '/var/www/d7'
+        drupal_root: '/var/www/html'
       drush:
         alias: 'd7'
         # If you use aliases, then change it to what you like.
