--- a/.probo.yaml
+++ b/.probo.yaml
@@ -1,7 +1,7 @@
 assets:
   - d7.sql.gz
 steps:
-  - name: Probo site setup
+  - name: Probo site setup!!
     plugin: Drupal
     database: d7.sql.gz
     databaseGzipped: true
