--- a/.probo.yaml
+++ b/.probo.yaml
@@ -12,7 +12,7 @@ steps:
     command: 'pwd'
   - name: Build behat deps
     plugin: Shell
-    command: 'cd $SRC_DIR/sites/all/tests ; composer install'
+    command: 'cd $SRC_DIR/www/sites/all/tests ; composer install'
   - name: Run behat tests
     plugin: Shell
     command: '$SRC_DIR/www/sites/all/tests/bin/behat --config sites/all/tests/behat.probo.yml --tags=probo'
