--- a/.probo.yaml
+++ b/.probo.yaml
@@ -11,7 +11,7 @@ steps:
     plugin: Shell
     command: |
       echo '<?php ' >> ~/.drush/aliases.drushrc.php ;
-      echo '$aliases["self"] = ["root" => "/var/www/html/www", "uri" => "http://default"];' >> ~/.drush/aliases.drushrc.php ;
+      echo '$aliases["self"] = ["root" => "/src/www", "uri" => "http://default"];' >> ~/.drush/aliases.drushrc.php ;
       cd ~ ;
       drush @self cc all ;
   - name: pwd
