--- a/.probo.yaml
+++ b/.probo.yaml
@@ -3,7 +3,7 @@ assets:
 steps:
   - name: Probo site setup2
     plugin: Drupal
-    database: d7.sql.gz
+    database: d7.sql.bz2
     databaseBzipped: true
     databaseUpdates: true
     subDirectory: www
